--- a/templates/first.html
+++ b/templates/first.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>DIABETEC PREDICTION</title>
 </head>
-<body background="diabetes.jfif" style="background-repeat: no-repeat;background-size: 100%"><center>
+<body background="https://github.com/smahakal/FINAL-PROJECT/blob/main/templates/diabetes.jfif" style="background-repeat: no-repeat;background-size: 100%"><center>
     <div class="container">
         
         <h2 class='container-heading' ><span class="heading_font"><font size="7"
