--- a/templates/res.html
+++ b/templates/res.html
@@ -7,7 +7,7 @@
     <title>Diabetes Result</title>
 </head>
 
-<body background="https://github.com/smahakal/FINAL-PROJECT/blob/main/templates/diabetic.jfif" style="background-repeat: no-repeat;background-size: 100%">
+<body background= "{{ url_for('templates', filename='diabetic.jfif')}}"  style="background-repeat: no-repeat;background-size: 100%">
     <center>
         <div class="container">
         <form action="{{url_for('predict')}}" method="POST">
