--- a/templates/first.html
+++ b/templates/first.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>DIABETEC PREDICTION</title>
 </head>
-<body background=" src="{{ url_for('templates', filename='')}}" style="background-repeat: no-repeat;background-size: 100%"><center>
+<body background=" src="{{ url_for('templates', filename='diabetic.jfif')}}" style="background-repeat: no-repeat;background-size: 100%"><center>
     <div class="container">
         
         <h2 class='container-heading' ><span class="heading_font"><font size="7"
