--- a/templates/first.html
+++ b/templates/first.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>DIABETEC PREDICTION</title>
 </head>
-<body background=" src="{{ url_for('templates', filename='diabetic.jfif')}}" style="background-repeat: no-repeat;background-size: 100%"><center>
+<body background="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTtaQJCYYgBK-HZXYOqp-v8PpOu112ylrC1OQ&usqp=CAU" style="background-repeat: no-repeat;background-size: 130%"><center>
     <div class="container">
         
         <h2 class='container-heading' ><span class="heading_font"><font size="7"
@@ -25,7 +25,7 @@
             <table>
                 <tr>
                     <td width="200px" height="80px"><h3><b>PREGNANCIES</b></h3></td>
-                    <td width="200px" height="80px"><input id="first" name="PREGNANCIES" placeholder="pregnacies number(only number)" style="width: 150px;height: 30px;border-radius: 10px" required="required"></td>
+                    <td width="200px" height="80px"><input id="first" name="PREGNANCIES" placeholder="enter number of pregnancies" style="width: 150px;height: 30px;border-radius: 10px" required="required"></td>
                 </tr>
             
                 <tr>
@@ -58,7 +58,7 @@
             
                 <tr>
                     <td width="200px" height="80px"><h3><b>AGE</b></h3></td>
-                    <td width="200px" height="80px"><input id="first" name="AGE" placeholder="BETWEEN 20 TO 100" style="width: 150px;height: 30px;border-radius: 10px" required="required"></td>
+                    <td width="200px" height="80px"><input id="first" name="AGE" placeholder="RANGE BETWEEN 20 TO 100" style="width: 150px;height: 30px;border-radius: 10px" required="required"></td>
                 </tr>
                 
             </table>
