--- a/templates/res.html
+++ b/templates/res.html
@@ -7,7 +7,8 @@
     <title>Diabetes Result</title>
 </head>
 
-<body background= "{{ url_for('templates', filename='diabetic.jfif')}}"  style="background-repeat: no-repeat;background-size: 100%">
+<body background="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTws_S9FsiFpYM0jspZM7lf59hHR6SOFQ720Q&usqp=CAU
+" style="background-repeat: no-repeat;background-size: 100%">
     <center>
         <div class="container">
         <form action="{{url_for('predict')}}" method="POST">
